<resources>
    <string name="ab_subtitle_library_format">%d items</string>
    <string name="ab_title_edit_image">Edit image</string>
    <string name="ab_title_gallery_format">%1$d of %2$d</string>
    <string name="ab_title_help">Help</string>
    <string name="ab_title_library">Library</string>
    <string name="ab_title_report">Generate Report</string>
    <string name="ab_title_settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_flir_about_label">About FLIR Systems Inc.</string>
    <string name="about_general_about_label">About</string>
    <string name="about_header_about">About</string>
    <string name="about_header_sys_info">System Information</string>
    <string name="about_licenses_label">Software Licenses</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="about_regulatory_label">Regulatory</string>
    <string name="about_screen_title">About</string>
    <string name="about_sys_app_version">App version</string>
    <string name="about_sys_hw_serial">Thermal camera serial</string>
    <string name="about_sys_hw_version">Hardware version</string>
    <string name="about_terms_header">Terms</string>
    <string name="about_terms_label">Terms &amp; Conditions</string>
    <string name="activity_gallery">Gallery</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_notification_details">A temperature between %1$.2f%3$s and %2$.2f%3$s was detected</string>
    <string name="alarm_set">Alarm set</string>
    <string name="alert">Alert</string>
    <string name="alignment_instructions">"Place a hand in the field of view, about ½ meter away. 
Select  to pause and adjust the alignment."</string>
    <string name="alignment_overlay_user_leading_text">"Adjust the image by dragging. 
Use the slider below to rotate."</string>
    <string name="app_name">MyFLIR</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="bing">Bing</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_live_mode">MODE</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_alarm">Unset alarm</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="comment_hint_format">Notes for image %d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="community">Community</string>
    <string name="compass">Compass</string>
    <string name="constrants_not_available">NA</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="default_report_title">FLIR Thermal Image Report</string>
    <string name="dialog_alignment_title">Image Realignment</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_emissivity_info_1">"Emissivity is the ability of the material to emit infrared radiation. To get an accurate measurement, the emissivity needs to match the material you are viewing. For most materials, the default 'Matte' setting is a good approximation."</string>
    <string name="dialog_emissivity_info_2">Glossy materials such as metals, can give incorrect temperature measurements.</string>
    <string name="dialog_emissivity_option_custom">Custom (Advanced use only)</string>
    <string name="dialog_emissivity_option_glossy">Glossy (Not recommended)</string>
    <string name="dialog_emissivity_option_matte">Matte (Recommended)</string>
    <string name="dialog_emissivity_option_semiglossy">Semi-Glossy</string>
    <string name="dialog_emissivity_option_semimatte">Semi-Matte</string>
    <string name="dialog_emissivity_title">Emissivity</string>
    <string name="dialog_error_label">Error: code=%1$d, msg=%2$s.</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_location_info_temp_to">to</string>
    <string name="dialog_message_delete">1 item will be deleted</string>
    <string name="dialog_message_delete_all_meas">All measurements will be deleted</string>
    <string name="dialog_message_delete_format">%s items will be deleted</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_panorama_message">Composing panorama, please wait.</string>
    <string name="dialog_panorama_title">Panorama</string>
    <string name="dialog_revert">REVERT</string>
    <string name="dismiss">Dismiss</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_load_calib">Failed to load calibration data, please restart your device.</string>
    <string name="error_vis_cam">Error opening visible camera.</string>
    <string name="event_first">First application start</string>
    <string name="event_reoccurring">Application start</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fiets_nl">OpenFietsKaart overlay</string>
    <string name="first_fix_message">Got the first fix</string>
    <string name="format_distance_feet">%s ft</string>
    <string name="format_distance_kilometers">%s km</string>
    <string name="format_distance_meters">%s m</string>
    <string name="format_distance_miles">%s mi</string>
    <string name="format_distance_nautical_miles">%s nm</string>
    <string name="format_distance_only_foot">ft</string>
    <string name="info_label_loc">Location:</string>
    <string name="info_label_palette">Palette:</string>
    <string name="info_label_temp">Temperature:</string>
    <string name="info_location_na">Not available</string>
    <string name="live_mode_caption_panorama">Panorama</string>
    <string name="live_mode_caption_photo">Photo</string>
    <string name="live_mode_caption_timelapse">Time-lapse</string>
    <string name="live_mode_caption_video">Video</string>
    <string name="live_mode_description_panorama">Create a linear panorama image by panning the camera from left to right or from right to left.</string>
    <string name="live_mode_description_photo">Create a photo by tapping the capture button.</string>
    <string name="live_mode_description_timalapse">Create a time-lapse video by letting the camera capture several images in a set time interval and creating a video clip based on these images.</string>
    <string name="live_mode_description_video">Create a video by tapping the capture button.</string>
    <string name="measurement_info_max">Max</string>
    <string name="measurement_info_min">Min</string>
    <string name="menu_show_palettes">Show palettes</string>
    <string name="menu_toggle_measurements">Toggle measurements</string>
    <string name="report_info_notes">Notes</string>
    <string name="timelapse_elapsed">Show Elapsed Time</string>
    <string name="timelapse_format">%s s</string>
    <string name="timelapse_fps_format">%s fps</string>
    <string name="timelapse_initial_delay">Initial delay</string>
    <string name="timelapse_interval">Frame Interval</string>
    <string name="timelapse_playback">Playback Rate</string>
    <string name="timelapse_unit_fps">fps</string>
    <string name="timelapse_unit_seconds">s</string>
    <string name="tooltip_blending_mode">Blending Mode</string>
    <string name="tooltip_ir_scale">Toggle IR Scale</string>
</resources>