<?xml version="1.0" encoding="utf-8"?>
<com.flir.monarch.widget.TimelapseOptions android:orientation="vertical" android:id="@id/timelapseSettings" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.flir.monarch.widget.TimelapseDialerSetting android:id="@id/delayContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" app:format="@string/timelapse_format" app:header="@string/timelapse_initial_delay" app:max="99" app:unit="@string/timelapse_unit_seconds">
        <include layout="@layout/include_dialer_setting" />
    </com.flir.monarch.widget.TimelapseDialerSetting>
    <com.flir.monarch.widget.TimelapseDialerSetting android:gravity="center" android:orientation="horizontal" android:id="@id/intervalContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" app:format="@string/timelapse_format" app:header="@string/timelapse_interval" app:max="99" app:unit="@string/timelapse_unit_seconds">
        <include layout="@layout/include_dialer_setting" />
    </com.flir.monarch.widget.TimelapseDialerSetting>
    <com.flir.monarch.widget.TimelapseDialerSetting android:gravity="center" android:orientation="horizontal" android:id="@id/playbackContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" app:format="@string/timelapse_fps_format" app:header="@string/timelapse_playback" app:max="30" app:unit="@string/timelapse_unit_fps">
        <include layout="@layout/include_dialer_setting" />
    </com.flir.monarch.widget.TimelapseDialerSetting>
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:id="@id/elapsedContainer" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timelapse_elapsed" android:lines="1" android:layout_weight="1.0" android:layout_toLeftOf="@id/timeSwitch" android:layout_alignParentLeft="true" android:fontFamily="sans-serif-light" />
        <androidx.appcompat.widget.SwitchCompat android:id="@id/timeSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
    </RelativeLayout>
</com.flir.monarch.widget.TimelapseOptions>
